--- a/src/App.css
+++ b/src/App.css
@@ -40,13 +40,14 @@
 img {
   width: 400px;
   height: 500px;
+  margin-top: 50px;
 }
 
 h1 {
 align-items: center;
+font-size: 30px;
 }
 
 h2 {
   align-items: center;
 }
-
