--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,10 +1,16 @@
 nav {
   text-decoration: none;
   text-align: center;
+  border-bottom: 1.5px solid black;
 }
 
-ul {
+nav ul {
   display: flex;
-  text-align: right;
-  text-decoration: none;
+  justify-content: flex-end;
+  list-style: none;
+}
+
+nav li {
+  margin: 10px;
+  font-weight: bold;
 }
