--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,11 @@ font-size: 30px;
 h2 {
   align-items: center;
 }
+
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  height: fit-content;
+}
